--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   better_player:
-    path: ../ # /Users/nicholasnagy/Documents/Documents - Nicholas’s MacBook Air/dev/BetterPlayer
+    path: ../
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
