--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,7 +22,8 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 34
+    buildToolsVersion "34.0.0"
     namespace "com.jhomlala.better_player"
 
     defaultConfig {
