--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,14 +7,14 @@ authors:
 homepage: https://github.com/jhomlala/betterplayer
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
   flutter: ">=1.10.0"
 
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  wakelock: ^0.5.0+2
+  wakelock_plus: ^1.2.10
   pedantic: ^1.11.0
   meta: ^1.3.0
   flutter_widget_from_html_core: ^0.6.0-rc.2021030201
